--- a/PokeEnti/PokeEnti/PokeEnti.vcxproj.filters
+++ b/PokeEnti/PokeEnti/PokeEnti.vcxproj.filters
@@ -38,9 +38,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Datos.h">
-      <Filter>Archivos de origen</Filter>
-    </ClInclude>
     <ClInclude Include="Map.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
@@ -62,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="config.txt">
-      <Filter>Archivos de origen</Filter>
+      <Filter>Archivos de recursos</Filter>
     </Text>
   </ItemGroup>
 </Project>
