--- a/PokeEnti/PokeEnti/PokeEnti.vcxproj.filters
+++ b/PokeEnti/PokeEnti/PokeEnti.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="ReadDoc.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="Ash.cpp">
+    <ClCompile Include="Player.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
@@ -44,7 +44,7 @@
     <ClInclude Include="ReadDoc.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
-    <ClInclude Include="Ash.h">
+    <ClInclude Include="Player.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
